==> alexeyk13/rexos/kernel/stm32/stm32_uart.c <==
#include "stm32_uart.h"
#include "stm32_power.h"
#include "../../userspace/sys.h"
#include "../kerror.h"
#include "../kstdlib.h"
#include "../ksystime.h"
#include "../kstream.h"
#include "../kirq.h"
#include "../kexo.h"
#include <string.h>
#include "stm32_exo_private.h"
#include "sys_config.h"
#define APB1ENR APB1LENR
#define USART_SR_TXE        USART_ISR_TXE
#define USART_SR_TC         USART_ISR_TC
#define USART_SR_PE         USART_ISR_PE
#define USART_SR_FE         USART_ISR_FE
#define USART_SR_NE         USART_ISR_NE
#define USART_SR_ORE        USART_ISR_ORE
#define USART_SR_RXNE       USART_ISR_RXNE
#define SR(port)            (UART_REGS[(port)]->ISR)
#define ICR(port)            (UART_REGS[(port)]->ICR)
#define TXC(port, c)        (UART_REGS[(port)]->TDR = (c))
#define USART_SR_TXE        USART_ISR_TXE_TXFNF
#define USART_SR_TC         USART_ISR_TC
#define USART_SR_PE         USART_ISR_PE
#define USART_SR_FE         USART_ISR_FE
#define USART_SR_NE         USART_ISR_NE
#define USART_SR_ORE        USART_ISR_ORE
#define USART_SR_RXNE       USART_ISR_RXNE_RXFNE
#define SR(port)            (UART_REGS[(port)]->ISR)
#define ICR(port)            (UART_REGS[(port)]->ICR)
#define TXC(port, c)        (UART_REGS[(port)]->TDR = (c))
#define SR(port)            (UART_REGS[(port)]->SR)
#define TXC(port, c)        (UART_REGS[(port)]->DR = (c))
#define ICR(port)            (UART_REGS[(port)]->SR)

static inline bool stm32_uart_on_tx_isr(EXO* exo, UART_PORT port)
{
    UART* uart = exo->uart.uarts[port];
#if (UART_IO_MODE_SUPPORT)
    if (uart->io_mode)
    {
        if (uart->i.tx_io)
        {
            TXC(port, ((uint8_t*)io_data(uart->i.tx_io))[uart->i.tx_processed++]);
            if (uart->i.tx_processed < uart->i.tx_io->data_size)
                return true;
            iio_complete(uart->i.tx_process, HAL_IO_CMD(HAL_UART, IPC_WRITE), port, uart->i.tx_io);
            uart->i.tx_io = NULL;
        }
    }
    else
#endif //UART_IO_MODE_SUPPORT
    {
        if (uart->s.tx_size == 0)
        {
            uart->s.tx_total = uart->s.tx_size = stream_iread_no_block(uart->s.tx_handle, uart->s.tx_buf, UART_BUF_SIZE);
            //nothing more, listen
            if (uart->s.tx_size == 0)
            {
                stream_ilisten(uart->s.tx_stream, port, HAL_UART);
                return false;
            }
        }
        TXC(port, uart->s.tx_buf[uart->s.tx_total - uart->s.tx_size--]);
        return  true;
    }
    return false;
}

void stm32_uart_on_isr(int vector, void* param)
{
    //find port by vector
    UART_PORT port;
    uint8_t c;
#if defined(STM32L0) || defined(STM32F0)
    unsigned int sr = 0;
#else
    uint16_t sr;
#endif
    EXO* exo = (EXO*)param;

    for (port = UART_1; port < UART_MAX && UART_VECTORS[port] != vector; ++port) {}

#if defined(STM32F0) && (UARTS_COUNT > 3)
    if (port == UART_3)
    {
        for (port = UART_3; port < UARTS_COUNT; ++port)
        {
            if (exo->uart.uarts[port] == NULL)
                continue;
            sr = UART_REGS[port]->ISR;
            if (((UART_REGS[port]->CR1 & USART_CR1_TXEIE) && (sr & USART_SR_TXE)) ||
                ((UART_REGS[port]->CR1 & USART_CR1_TCIE) && (sr & USART_SR_TC)) ||
                (sr & (USART_SR_PE | USART_SR_FE | USART_SR_NE | USART_SR_ORE)) ||
                (sr & USART_SR_RXNE))
                break;
        }
        if (port == UARTS_COUNT)
            return;
    }
    else
#endif
        sr = SR(port);

    //decode error, if any
    if (sr & (USART_SR_PE | USART_SR_FE | USART_SR_NE | USART_SR_ORE))
    {
        if (sr & USART_SR_ORE)
            exo->uart.uarts[port]->error = ERROR_OVERFLOW;
        else
        {
#if defined(STM32L0) || defined(STM32F0) || defined(STM32H7)
            __REG_RC32(UART_REGS[port]->RDR);
#else
            __REG_RC32(UART_REGS[port]->DR);
#endif
            if (sr & USART_SR_FE)
                exo->uart.uarts[port]->error = ERROR_INVALID_FRAME;
            else if (sr & USART_SR_PE)
                exo->uart.uarts[port]->error = ERROR_INVALID_PARITY;
            else if  (sr & USART_SR_NE)
                exo->uart.uarts[port]->error = ERROR_LINE_NOISE;
        }
    }
    ICR(port) = USART_SR_PE | USART_SR_FE | USART_SR_NE | USART_SR_ORE;

    //transmit more
    if (UART_REGS[port]->CR1 & USART_CR1_TXEIE)
    {
        if (sr & USART_SR_TXE)
        {
            if (!stm32_uart_on_tx_isr(exo, port))
            {
                UART_REGS[port]->CR1 &= ~USART_CR1_TXEIE;
                UART_REGS[port]->CR1 |= USART_CR1_TCIE;
            }
        }
    }
    //transmission completed and no more data. Disable transmitter
    if ((UART_REGS[port]->CR1 & USART_CR1_TCIE) && (SR(port) & USART_SR_TC))
    {
        UART_REGS[port]->CR1 &= ~(USART_CR1_TE | USART_CR1_TCIE);
    }

    //receive data
    if (SR(port) & USART_SR_RXNE)
    {
#if defined(STM32L0) || defined(STM32F0) || defined(STM32H7)
        c = UART_REGS[port]->RDR;
#else
        c = UART_REGS[port]->DR;
#endif
#if (UART_ISO7816_MODE_SUPPORT)
        if((UART_REGS[port]->CR1 & USART_CR1_TE) == 0)
#endif // UART_ISO7816_MODE_SUPPORT
            stm32_uart_on_rx_isr(exo, port, c);
    }
}

void uart_write_kernel(const char *const buf, unsigned int size, void* param)
{
    NVIC_DisableIRQ(UART_VECTORS[(UART_PORT)param]);
    int i;
    UART_REGS[(UART_PORT)param]->CR1 |= USART_CR1_TE;
    for(i = 0; i < size; ++i)
    {
#if defined(STM32L0) || defined(STM32F0) || defined(STM32H7)
        while ((UART_REGS[(UART_PORT)param]->ISR & USART_SR_TXE) == 0) {}
        UART_REGS[(UART_PORT)param]->TDR = buf[i];
#else
        while ((UART_REGS[(UART_PORT)param]->SR & USART_SR_TXE) == 0) {}
        UART_REGS[(UART_PORT)param]->DR = buf[i];
#endif
    }
    UART_REGS[(UART_PORT)param]->CR1 |= USART_CR1_TCIE;
    //transmitter will be disabled in next IRQ TC
    NVIC_EnableIRQ(UART_VECTORS[(UART_PORT)param]);
}

static inline void stm32_uart_set_baudrate(EXO* exo, UART_PORT port, IPC* ipc)
{
    BAUD baudrate;
    unsigned int clock, stop;
    if (exo->uart.uarts[port] == NULL)
    {
        kerror(ERROR_NOT_CONFIGURED);
        return;
    }
    uart_decode_baudrate(ipc, &baudrate);

    UART_REGS[port]->CR1 &= ~USART_CR1_UE;
    if (baudrate.data_bits == 8 && baudrate.parity != 'N')
#if defined(STM32L0)
        UART_REGS[port]->CR1 |= USART_CR1_M_0;
#elif defined(STM32F0) || defined(STM32H7)
        UART_REGS[port]->CR1 |= USART_CR1_M0;
#else
        UART_REGS[port]->CR1 |= USART_CR1_M;
#endif
    else
#if defined(STM32L0)
        UART_REGS[port]->CR1 &= ~USART_CR1_M_0;
#elif defined(STM32F0) || defined(STM32H7)
        UART_REGS[port]->CR1 &= ~USART_CR1_M0;
#else
        UART_REGS[port]->CR1 &= ~USART_CR1_M;
#endif

      if (baudrate.parity != 'N')
    {
        UART_REGS[port]->CR1 |= USART_CR1_PCE;
        if (baudrate.parity == 'O')
            UART_REGS[port]->CR1 |= USART_CR1_PS;
        else
            UART_REGS[port]->CR1 &= ~USART_CR1_PS;
    }
    else
        UART_REGS[port]->CR1 &= ~USART_CR1_PCE;

    switch (baudrate.stop_bits)
    {
    case 2:
        stop = 2;
        break;
    //0.5
    case 5:
        stop = 1;
        break;
    //1.5
    case 15:
        stop = 3;
        break;
    default:
        stop = 0;
    }

    UART_REGS[port]->CR2 &= ~(3 << 12);
    UART_REGS[port]->CR2 |= (stop << 12);

    if (port == UART_1 || port >= UART_6)
        clock = stm32_power_get_clock_inside(exo, STM32_CLOCK_APB2);
    else
        clock = stm32_power_get_clock_inside(exo, STM32_CLOCK_APB1);
    unsigned int mantissa;
#if defined(STM32H7)
    mantissa = (2*clock / baudrate.baud);
    mantissa = (mantissa + 1) >> 1;
    UART_REGS[port]->BRR = mantissa;
#else
    unsigned int fraction;
    mantissa = (25 * clock) / (4 * (baudrate.baud));
    fraction = ((mantissa % 100) * 8 + 25)  / 50;
    mantissa = mantissa / 100;
    UART_REGS[port]->BRR = (mantissa << 4) | fraction;
#endif//

    UART_REGS[port]->CR1 |= USART_CR1_UE | USART_CR1_PEIE;
    UART_REGS[port]->CR3 |= USART_CR3_EIE;
}

static void stm32_uart_destroy(EXO* exo, UART_PORT port)
{
#if (UART_IO_MODE_SUPPORT)
    if (exo->uart.uarts[port]->io_mode)
    {
        ksystime_soft_timer_destroy(exo->uart.uarts[port]->i.rx_timer);
    }
    else
#endif //UART_IO_MODE_SUPPORT
    {
        //rx
        kstream_close(KERNEL_HANDLE, exo->uart.uarts[port]->s.rx_handle);
        kstream_destroy(exo->uart.uarts[port]->s.rx_stream);
        //tx
        kstream_close(KERNEL_HANDLE, exo->uart.uarts[port]->s.tx_handle);
        kstream_destroy(exo->uart.uarts[port]->s.tx_stream);
    }

    kfree(exo->uart.uarts[port]);
    exo->uart.uarts[port] = NULL;
    if (port == UART_1 || port >= UART_6)
        RCC->APB2ENR &= ~(1 << UART_POWER_PINS[port]);
    else
        RCC->APB1ENR &= ~(1 << UART_POWER_PINS[port]);
}

static inline void stm32_uart_open(EXO* exo, UART_PORT port, unsigned int mode)
{
    bool ok;
    if (exo->uart.uarts[port] != NULL)
    {
        kerror(ERROR_ALREADY_CONFIGURED);
        return;
    }
    exo->uart.uarts[port] = kmalloc(sizeof(UART));
    if (exo->uart.uarts[port] == NULL)
        return;
    exo->uart.uarts[port]->error = ERROR_OK;
#if (UART_IO_MODE_SUPPORT)
    exo->uart.uarts[port]->io_mode = ((mode & UART_MODE) == UART_MODE_IO);
#endif //UART_IO_MODE_SUPPORT

    //power up (required prior to reg work)
    if (port == UART_1 || port >= UART_6)
        RCC->APB2ENR |= 1 << UART_POWER_PINS[port];
    else
        RCC->APB1ENR |= 1 << UART_POWER_PINS[port];
    UART_REGS[port]->CR1 = 0;

#if (UART_IO_MODE_SUPPORT)
    if (exo->uart.uarts[port]->io_mode)
        ok = stm32_uart_open_io(exo->uart.uarts[port], port);
    else
#endif //UART_IO_MODE_SUPPORT
        ok = stm32_uart_open_stream(exo->uart.uarts[port], port, mode);
    if (!ok)
    {
        stm32_uart_destroy(exo, port);
        return;
    }

    //enable core
    UART_REGS[port]->CR1 |= USART_CR1_UE;

    //enable interrupts
#if defined(STM32F0) && (UARTS_COUNT > 3)
    if (port >= UART_3)
    {
        if (exo->uart.isr3_cnt++ == 0)
        {
            kirq_register(KERNEL_HANDLE, UART_VECTORS[UART_3], stm32_uart_on_isr, (void*)exo);
            NVIC_EnableIRQ(UART_VECTORS[UART_3]);
#if defined(UART_IRQ_PRIORITY)
            NVIC_SetPriority(UART_VECTORS[port], UART_IRQ_PRIORITY);
#else
            NVIC_SetPriority(UART_VECTORS[port], 13);
#endif // UART_IRQ_PRIORITY
        }
    }
    else
#endif
    {
        kirq_register(KERNEL_HANDLE, UART_VECTORS[port], stm32_uart_on_isr, (void*)exo);
        NVIC_EnableIRQ(UART_VECTORS[port]);
#if defined(UART_IRQ_PRIORITY)
        NVIC_SetPriority(UART_VECTORS[port], UART_IRQ_PRIORITY);
#else
        NVIC_SetPriority(UART_VECTORS[port], 13);
#endif // UART_IRQ_PRIORITY
    }
}

static inline void stm32_uart_close(EXO* exo, UART_PORT port)
{
    if (exo->uart.uarts[port] == NULL)
    {
        kerror(ERROR_NOT_CONFIGURED);
        return;
    }
    //disable interrupts
#if defined(STM32F0) && (UARTS_COUNT > 3)
    if (port >= UART_3)
    {
        if (--exo->uart.isr3_cnt == 0)
        {
            NVIC_DisableIRQ(UART_VECTORS[UART_3]);
            kirq_unregister(KERNEL_HANDLE, UART_VECTORS[UART_3]);
        }
    }
    else
#endif
    {
        NVIC_DisableIRQ(UART_VECTORS[port]);
        kirq_unregister(KERNEL_HANDLE, UART_VECTORS[port]);
    }

    //disable core
    UART_REGS[port]->CR1 &= ~USART_CR1_UE;
    stm32_uart_flush_internal(exo, port);
    stm32_uart_destroy(exo, port);
}

static inline void stm32_uart_flush(EXO* exo, UART_PORT port)
{
    if (exo->uart.uarts[port] == NULL)
    {
        kerror(ERROR_NOT_CONFIGURED);
        return;
    }
    stm32_uart_flush_internal(exo, port);
}

void stm32_uart_write(EXO* exo, UART_PORT port, unsigned int total)
{
    UART* uart = exo->uart.uarts[port];
    uart->s.tx_total = uart->s.tx_size = kstream_read_no_block(uart->s.tx_handle, uart->s.tx_buf, UART_BUF_SIZE);
    //start transaction
    UART_REGS[port]->CR1 |= USART_CR1_TE | USART_CR1_TXEIE;
}

void stm32_uart_request(EXO* exo, IPC* ipc)
{
    UART_PORT port = (UART_PORT)ipc->param1;
    if (port >= UARTS_COUNT)
    {
        kerror(ERROR_INVALID_PARAMS);
        return;
    }
    switch (HAL_ITEM(ipc->cmd))
    {
    case IPC_OPEN:
        stm32_uart_open(exo, port, ipc->param2);
        break;
    case IPC_CLOSE:
        stm32_uart_close(exo, port);
        break;
    case IPC_UART_SET_BAUDRATE:
        stm32_uart_set_baudrate(exo, port, ipc);
        break;
    case IPC_FLUSH:
        stm32_uart_flush(exo, port);
        break;
    case IPC_GET_TX_STREAM:
        ipc->param2 = stm32_uart_get_tx_stream(exo, port);
        break;
    case IPC_GET_RX_STREAM:
        ipc->param2 = stm32_uart_get_rx_stream(exo, port);
        break;
    case IPC_UART_GET_LAST_ERROR:
        ipc->param2 = stm32_uart_get_last_error(exo, port);
        break;
    case IPC_UART_CLEAR_ERROR:
        stm32_uart_clear_error(exo, port);
        break;
    case IPC_UART_SETUP_PRINTK:
        stm32_uart_setup_printk(exo, port);
        break;
    case IPC_STREAM_WRITE:
        stm32_uart_write(exo, port, ipc->param3);
        //message from kernel, no response
        break;
#if (UART_IO_MODE_SUPPORT)
    case IPC_READ:
        stm32_uart_io_read(exo, port, ipc);
        break;
    case IPC_WRITE:
        stm32_uart_io_write(exo, port, ipc);
        break;
    case IPC_TIMEOUT:
        stm32_uart_io_read_timeout(exo, port);
        break;
    case IPC_UART_SET_COMM_TIMEOUTS:
        stm32_uart_set_timeouts(exo, port, ipc->param2, ipc->param3);
        break;
#endif //UART_IO_MODE_SUPPORT
    default:
        kerror(ERROR_NOT_SUPPORTED);
        break;
    }
}
